--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -44,7 +44,7 @@ main {
 .img-overlay-wrap img,
 .actie-image img {
   // height: 100%;
-  // min-height: 50vh;
+  min-height: 50vh;
   object-fit: cover;
 }
 
