--- a/_sass/mediaqueries.scss
+++ b/_sass/mediaqueries.scss
@@ -4,6 +4,18 @@
     border-radius: 0px 0px var(--border-radius-desktop) 0px;
     width: 87%;
   }
+
+  .nav-desktop {
+    display: flex;
+    align-items: end;
+    margin-right: 3em;
+    ul {
+      display: block;
+      li {
+        font-size: 15px;
+      }
+    }
+  }
   .extracorner::after {
     width: var(--border-radius-desktop);
     height: calc(var(--border-radius-desktop) * 2);
