--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,10 +11,11 @@ main {
 }
 
 .container {
-  max-width: 1650px;
+  max-width: var(--container-width);
   margin: 0 auto;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15);
   overflow: hidden;
+  position: relative;
 }
 
 .innercontainer {
@@ -45,6 +46,9 @@ main {
   display: block;
   max-width: 100%;
   height: 50vh;
+}
+.actie-image img {
+  height: 100%;
 }
 
 .img-overlay-wrap .svg1-desktop {
@@ -209,13 +213,34 @@ main {
 }
 
 .photo img {
-  width: 100%;
-  aspect-ratio: 1;
+  display: block;
   object-fit: cover;
   transition: border-radius 0.2s ease-out;
   border-top-right-radius: var(--border-radius);
   border-bottom-left-radius: var(--border-radius);
   overflow: hidden;
+}
+
+.photo-wrapper {
+  position: relative;
+  width: 100%; /* The size you want */
+}
+.photo-wrapper:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%; /* The padding depends on the width, not on the height, so with a padding-bottom of 100% you will get a square */
+}
+
+.photo-wrapper img {
+  position: absolute; /* Take your picture out of the flow */
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0; /* Make the picture taking the size of it's parent */
+  width: 100%; /* This if for the object-fit */
+  height: 100%; /* This if for the object-fit */
+  object-fit: cover; /* Equivalent of the background-size: cover; of a background-image */
+  object-position: center;
 }
 
 .photo img:hover {
@@ -466,6 +491,7 @@ main ul {
   line-height: 1.3;
   font-weight: 300;
   list-style: none;
+  color: var(--clr-black);
 }
 
 main li {
