--- a/_sass/mediaqueries.scss
+++ b/_sass/mediaqueries.scss
@@ -2,7 +2,26 @@
   nav {
     position: relative;
     border-radius: 0px 0px var(--border-radius-desktop) 0px;
+
+    max-width: var(--container-width);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+  }
+
+  .fixed-wrapper {
+    width: 100%;
+    position: absolute;
+    z-index: 20000;
+    top: 0;
     width: 87%;
+    right: 0;
+    left: 0; /* Move this out to the left of the site body, leaving a 20px gutter */
+  }
+
+  /* The element you want to fix the position of */
+  .fixed-menu {
+    width: 100%;
+    position: fixed;
+    /* Do not set top / left! */
   }
 
   .nav-desktop {
@@ -38,7 +57,7 @@
 
   .landing {
     flex-direction: row-reverse;
-
+    margin-top: 128px;
     padding-bottom: 0;
     box-shadow: 0 -130px 0 0 var(--clr-green);
   }
@@ -109,14 +128,17 @@
     letter-spacing: 0.23px;
     margin-top: 60px;
     margin-bottom: 16px;
-    max-width: 400px;
+    width: 40vw;
+    max-width: 700px;
   }
 
   .landing-content p {
     font-size: 15px;
     line-height: 25px;
     font-weight: 300;
-    max-width: 400px;
+    padding-right: 6em;
+    width: 40vw;
+    max-width: 700px;
   }
 
   .landing-content {
@@ -229,21 +251,22 @@
   }
 
   .actievraag-content {
-    flex: 1 1 0px;
+    flex: 1;
     padding-top: 5em;
     padding-left: 10em;
     padding-right: 0;
-    max-width: 320px;
+    // max-width: 320px;
   }
 
   .actievraag-content h2,
   .ontdek {
     font-size: 28px;
     line-height: 39px;
+    max-width: 320px;
   }
 
   .actie-image {
-    flex: 1 1 0px;
+    flex: 1;
     // height: 500px;
     object-fit: cover;
     // height: min-content;
@@ -287,7 +310,7 @@
       justify-content: space-between;
 
       img {
-        align-self: end;
+        // align-self: end;
         padding-bottom: 5em;
         width: 400px;
         margin-bottom: 0;
@@ -297,7 +320,7 @@
       margin-top: 0;
     }
     img {
-      align-self: end;
+      // align-self: end;
     }
   }
   .connect-to-perform {
@@ -372,8 +395,32 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1400px) {
   .innercontainer {
     max-width: 1156px;
+  }
+  .contact {
+    img {
+      max-height: 350px;
+      width: auto;
+      margin-left: 0;
+    }
+  }
+}
+@media (min-width: 1700px) {
+  .fixed-menu {
+    width: 90%;
+  }
+}
+
+@media (min-width: 1870px) {
+  .fixed-menu {
+    width: 80%;
+  }
+}
+
+@media (min-width: 2000px) {
+  .fixed-menu {
+    width: 70%;
   }
 }
