fixed nav positioning

--- a/_sass/mediaqueries.scss
+++ b/_sass/mediaqueries.scss
@@ -2,7 +2,7 @@
   nav {
     position: relative;
     border-radius: 0px 0px var(--border-radius-desktop) 0px;
-
+    width: 85%;
     max-width: var(--container-width);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
   }
