--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -9,11 +9,11 @@ nav {
   justify-self: auto;
   padding: 1em;
   padding-right: 2.8em;
-  position: fixed;
+  position: absolute;
   background: white;
   // position: fixed;
   top: 0;
-  width: 85%;
+
   left: 0;
   right: 1.5em;
   z-index: 20000;
