--- a/_sass/mediaqueries.scss
+++ b/_sass/mediaqueries.scss
@@ -5,6 +5,7 @@
     width: 85%;
     max-width: var(--container-width);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+    padding-right: 2.8em;
   }
 
   .fixed-wrapper {
