finished werken bij

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -45,7 +45,11 @@
             <ul class="dropdown" aria-label="submenu">
               <li class="menu-filler menu-filler-contact"></li>
               <li><a href="#" class="dropdown-link">Contact</a></li>
-              <li><a href="#" class="dropdown-link">Werken bij ons</a></li>
+              <li>
+                <a href="{{site.url}}/werken-bij" class="dropdown-link"
+                  >Werken bij ons</a
+                >
+              </li>
             </ul>
           </li>
         </ul>
