--- a/_layouts/teammembers.html
+++ b/_layouts/teammembers.html
@@ -2,6 +2,27 @@
 layout: default
 ---
 
-<h1>{{page.title}}</h1>
-<img src="{{page.photo_url}}" alt="" />
-<p>{{page.summary | markdownify}}</p>
+<main>
+  {% include button-omhoog.html %}
+  <section class="team-member">
+    <div class="innercontainer innercontainer--werken-bij">
+      <div class="grid-layout">
+        <div class="a">
+          <h2>{{page.title}}</h2>
+          {{page.summary | markdownify}}
+        </div>
+        <div class="card b {{page.bg_color}}">
+          <img src="{{page.photo_url}}" alt="" />
+          <div class="card-content">
+            <p class="card-title">{{page.card_title}}</p>
+            <p class="card-phone-number"><i class="fa-solid fa-phone"></i> {{page.phonenumber}}</p>
+            <p><i class="fa-solid fa-envelope"></i> {{page.email}}</a></p>
+            <p class="card-title">{{page.soundbites}}</p>
+            <p>{{page.soundbites_text}}</p>
+          </div>
+        </div>
+        <div class="c">{{page.uitleg |markdownify}}</div>
+      </div>
+    </div>
+  </section>
+</main>
