--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,13 @@
 <div class="fixed-wrapper">
   <div class="fixed-menu">
     <nav role="navigation" class="extracorner" id="nav">
-      <img
-        class="mainlogo"
-        src="/assets/images/upload/Logo Human Connection.svg"
-        alt=""
-      />
+      <a class="mainlogolink" href="/">
+        <img
+          class="mainlogo"
+          src="/assets/images/upload/Logo Human Connection.svg"
+          alt=""
+        />
+      </a>
       <button class="hamburger hamburger--squeeze" type="button">
         <span class="hamburger-box">
           <span class="hamburger-inner"></span>
